--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -18,34 +18,18 @@
         <form id="login-form" class="form-grid">
           <label>
             手机号
-            <input type="tel" id="login-phone" name="phone" placeholder="请输入手机号" required />
+            <input type="tel" id="login-phone" name="phone" placeholder="请输入 11 位手机号" autocomplete="tel" required />
           </label>
           <label>
             密码
-            <input type="password" id="login-password" name="password" placeholder="密码" required />
+            <input type="password" id="login-password" name="password" placeholder="请输入密码" autocomplete="current-password" required />
           </label>
           <button type="submit">登录</button>
         </form>
-
-        <details class="register-box">
-          <summary>没有账号？展开注册</summary>
-          <form id="register-form" class="form-grid">
-            <label>
-              手机号
-              <input type="tel" id="register-phone" name="phone" placeholder="请输入手机号" required />
-            </label>
-            <label>
-              姓名（可选）
-              <input type="text" id="register-name" name="full_name" placeholder="姓名或昵称" />
-            </label>
-            <label>
-              密码
-              <input type="password" id="register-password" name="password" placeholder="至少 6 位" required />
-            </label>
-            <button type="submit">注册并登录</button>
-          </form>
-        </details>
-        <div id="auth-message" class="info"></div>
+        <div class="auth-footer">
+          <span id="auth-message" class="info"></span>
+          <a class="link-btn" href="register.html">没有账号？去注册</a>
+        </div>
       </section>
 
       <section id="app-section" class="hidden">
