Enforce password length policy and polish signup UX

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -22,7 +22,7 @@
           </label>
           <label>
             密码
-            <input type="password" id="login-password" name="password" placeholder="请输入密码" autocomplete="current-password" required />
+            <input type="password" id="login-password" name="password" placeholder="请输入密码" autocomplete="current-password" maxlength="64" required />
           </label>
           <button type="submit">登录</button>
         </form>
