--- a/frontend/web/register.html
+++ b/frontend/web/register.html
@@ -25,11 +25,11 @@
           </label>
           <label>
             密码
-            <input type="password" id="register-password" name="password" placeholder="至少 8 位，包含字母和数字" autocomplete="new-password" required />
+            <input type="password" id="register-password" name="password" placeholder="至少 8 位，包含字母和数字" autocomplete="new-password" maxlength="64" required />
           </label>
           <label>
             确认密码
-            <input type="password" id="register-confirm" name="confirm_password" placeholder="请再次输入密码" autocomplete="new-password" required />
+            <input type="password" id="register-confirm" name="confirm_password" placeholder="请再次输入密码" autocomplete="new-password" maxlength="64" required />
           </label>
           <button type="submit">注册并登录</button>
         </form>
