Integrate original bidding UI directly into main dashboard

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>销售助手统一平台</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./bidding/styles.css" />
   </head>
   <body>
     <div class="container">
@@ -109,5 +110,6 @@
       </section>
     </div>
     <script type="module" src="./app.js"></script>
+      <script src="./bidding/main.js" defer></script>
   </body>
 </html>
