--- a/frontend/web/forgot.html
+++ b/frontend/web/forgot.html
@@ -1,55 +1,71 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>找回密码 · 销售助手</title>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <div class="container">
-      <header class="page-header">
-        <h1>找回密码</h1>
-        <p>申请重置令牌，设置新的登录密码。</p>
-      </header>
 
-      <section class="card">
-        <form id="reset-request-form" class="form-grid">
-          <label>
-            手机号
-            <input type="tel" id="reset-phone" name="phone" placeholder="请输入注册手机号" autocomplete="tel" required />
-          </label>
-          <button type="submit">发送找回请求</button>
-          <span id="reset-request-message" class="info"></span>
-        </form>
-      </section>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>找回密码 - Sales Assistant</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    }
 
-      <section class="card">
-        <form id="reset-confirm-form" class="form-grid">
-          <label>
-            手机号
-            <input type="tel" id="reset-confirm-phone" name="phone" placeholder="请输入注册手机号" autocomplete="tel" required />
-          </label>
-          <label>
-            重置令牌
-            <input type="text" id="reset-token" name="reset_token" placeholder="请输入收到的令牌" required />
-          </label>
-          <label>
-            新密码
-            <input type="password" id="reset-password" name="password" placeholder="至少 8 位且包含字母和数字" autocomplete="new-password" required />
-          </label>
-          <label>
-            确认新密码
-            <input type="password" id="reset-password-confirm" name="password_confirm" placeholder="再次输入新密码" autocomplete="new-password" required />
-          </label>
-          <button type="submit">重置密码并登录</button>
-          <span id="reset-confirm-message" class="info"></span>
-        </form>
-        <div class="auth-links" style="margin-top: 1rem;">
-          <a class="link-btn" href="index.html">返回登录</a>
-        </div>
-      </section>
+    .auth-card {
+      width: 100%;
+      max-width: 400px;
+      padding: var(--space-10);
+    }
+
+    .brand-logo {
+      text-align: center;
+      margin-bottom: var(--space-8);
+    }
+
+    .brand-logo h1 {
+      font-size: var(--font-size-2xl);
+      font-weight: var(--font-weight-bold);
+      background: linear-gradient(45deg, var(--color-primary), #00C6FB);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="card auth-card glass fade-in">
+    <div class="brand-logo">
+      <h1>找回密码</h1>
+      <p class="text-sm" style="margin-top: var(--space-2)">重置您的登录密码</p>
     </div>
-    <script type="module" src="./forgot.js"></script>
-  </body>
+
+    <form id="forgotForm">
+      <div class="input-group">
+        <label class="input-label" for="phone">手机号</label>
+        <input type="tel" id="phone" class="input-field" placeholder="请输入注册手机号" required>
+      </div>
+
+      <button type="submit" class="btn btn-primary" style="width: 100%; margin-top: var(--space-4)">
+        发送重置链接
+      </button>
+
+      <div class="text-center" style="margin-top: var(--space-6); text-align: center;">
+        <a href="login.html" class="text-sm" style="color: var(--color-text-secondary)">返回登录</a>
+      </div>
+    </form>
+  </div>
+
+  <script src="app.js"></script>
+  <script>
+    document.getElementById('forgotForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      alert('找回密码功能暂未开放，请联系管理员重置。');
+    });
+  </script>
+</body>
+
 </html>
