--- a/frontend/web/register.html
+++ b/frontend/web/register.html
@@ -1,102 +1,77 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>注册账号 - 省点儿</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>注册 - Sales Assistant</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-    body { font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif; }
-    .gradient-bg { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
+    body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    }
+
+    .auth-card {
+      width: 100%;
+      max-width: 400px;
+      padding: var(--space-10);
+    }
+
+    .brand-logo {
+      text-align: center;
+      margin-bottom: var(--space-8);
+    }
+
+    .brand-logo h1 {
+      font-size: var(--font-size-2xl);
+      font-weight: var(--font-weight-bold);
+      background: linear-gradient(45deg, var(--color-primary), #00C6FB);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
   </style>
 </head>
-<body class="bg-gray-50">
 
-  <div class="min-h-screen gradient-bg flex items-center justify-center px-4 py-12">
-    <div class="max-w-md w-full">
-
-      <!-- Logo 和标题 -->
-      <div class="text-center mb-8">
-        <h1 class="text-4xl font-bold text-white mb-3">省点儿</h1>
-        <p class="text-lg text-indigo-100">创建账号，开始使用</p>
-      </div>
-
-      <!-- 注册卡片 -->
-      <div class="bg-white rounded-2xl shadow-2xl p-8">
-        <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">创建新账号</h2>
-
-        <form id="register-form" class="space-y-5">
-          <div>
-            <label class="block text-sm font-medium text-gray-700 mb-2">手机号</label>
-            <input
-              type="tel"
-              id="register-phone"
-              name="phone"
-              placeholder="请输入11位手机号"
-              maxlength="11"
-              class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent transition"
-              required
-            />
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium text-gray-700 mb-2">用户名</label>
-            <input
-              type="text"
-              id="register-name"
-              name="full_name"
-              placeholder="请输入用户名"
-              class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent transition"
-              required
-            />
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium text-gray-700 mb-2">密码</label>
-            <input
-              type="password"
-              id="register-password"
-              name="password"
-              placeholder="至少8位，含字母和数字"
-              class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent transition"
-              required
-            />
-          </div>
-
-          <div>
-            <label class="block text-sm font-medium text-gray-700 mb-2">确认密码</label>
-            <input
-              type="password"
-              id="register-confirm"
-              name="confirm_password"
-              placeholder="再次输入密码"
-              class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent transition"
-              required
-            />
-          </div>
-
-          <button
-            type="submit"
-            class="w-full bg-gradient-to-r from-indigo-600 to-purple-600 text-white font-semibold py-3 rounded-lg hover:from-indigo-700 hover:to-purple-700 transition duration-200 shadow-lg"
-          >
-            注册
-          </button>
-        </form>
-
-        <div id="register-message" class="mt-4 text-sm text-center"></div>
-
-        <div class="mt-6 text-center">
-          <a href="index.html" class="text-indigo-600 hover:text-indigo-700 font-medium text-sm">已有账号？去登录</a>
-        </div>
-      </div>
-
-      <p class="text-center text-indigo-100 text-sm mt-6">
-        <a href="index.html" class="hover:text-white">← 返回首页</a>
-      </p>
+<body>
+  <div class="card auth-card glass fade-in">
+    <div class="brand-logo">
+      <h1>创建账号</h1>
+      <p class="text-sm" style="margin-top: var(--space-2)">加入 Sales Assistant</p>
     </div>
+
+    <form id="registerForm">
+      <div class="input-group">
+        <label class="input-label" for="phone">手机号</label>
+        <input type="tel" id="phone" class="input-field" placeholder="请输入手机号" required>
+      </div>
+
+      <div class="input-group">
+        <label class="input-label" for="fullName">姓名</label>
+        <input type="text" id="fullName" class="input-field" placeholder="您的真实姓名" required>
+      </div>
+
+      <div class="input-group">
+        <label class="input-label" for="password">密码</label>
+        <input type="password" id="password" class="input-field" placeholder="设置登录密码" required>
+      </div>
+
+      <button type="submit" class="btn btn-primary" style="width: 100%; margin-top: var(--space-4)">
+        注 册
+      </button>
+
+      <div class="text-center" style="margin-top: var(--space-6); text-align: center;">
+        <span class="text-sm">已有账号？</span>
+        <a href="login.html" style="font-weight: var(--font-weight-medium)">直接登录</a>
+      </div>
+    </form>
   </div>
 
-  <script src="./register.js"></script>
+  <script src="app.js"></script>
+  <script src="register.js"></script>
 </body>
+
 </html>
